--- a/debian/cryptroot-suspend/systemd_cryptroot-suspend.conf
+++ b/debian/cryptroot-suspend/systemd_cryptroot-suspend.conf
@@ -1,2 +1,3 @@
 [Service]
-ExecStart=/bin/openvt -ws /lib/cryptsetup/scripts/cryptroot-suspend
+ExecStart=
+ExecStart=/bin/openvt -ws /lib/cryptsetup/scripts/cryptroot-suspend-wrapper
