--- a/debian/rules
+++ b/debian/rules
@@ -34,6 +34,9 @@ override_dh_auto_build:
 	$(CC) -o debian/askpass debian/askpass.c $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -pedantic
 	$(CC) -o debian/scripts/passdev debian/scripts/passdev.c $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -pedantic
 
+	# build cryptroot-suspend
+	$(CC) -o debian/cryptroot-suspend/cryptroot-suspend debian/cryptroot-suspend/cryptroot-suspend.c $(CFLAGS) $(CPPFLAGS) -I$(CURDIR)/lib $(LDFLAGS) -L$(CURDIR)/.libs -lcryptsetup -pedantic
+
 	# generate manpages
 	sed 's/VERSION/$(DEB_VERSION)/;s/DATE/$(DEB_DATE)/' \
 		debian/doc/variables.xml.in >debian/doc/variables.xml
@@ -84,9 +87,9 @@ override_dh_fixperms-arch:
 	dh_fixperms
 	chmod 0755 debian/cryptsetup/lib/cryptsetup/checks/*
 	chmod 0755 debian/cryptsetup/lib/cryptsetup/scripts/decrypt_*
+	chmod 0755 debian/cryptsetup/lib/cryptsetup/scripts/cryptroot-suspend-wrapper
 	chmod 0755 debian/cryptsetup-udeb/lib/cryptsetup/checks/*
 	chmod 0755 debian/cryptsetup-udeb/lib/cryptsetup/scripts/decrypt_*
-	chmod 0755 debian/cryptsetup-udeb/lib/cryptsetup/scripts/cryptroot-suspend
 
 override_dh_fixperms-indep:
 	dh_fixperms
