Use VT5 as workaround for GDM inconsistencies
https://gitlab.gnome.org/GNOME/gdm/issues/527

--- a/debian/cryptroot-suspend/systemd_cryptroot-suspend.conf
+++ b/debian/cryptroot-suspend/systemd_cryptroot-suspend.conf
@@ -1,3 +1,5 @@
 [Service]
+# override ExecStart of systemd-suspend.service
+# use VT 5 as workaround for https://gitlab.gnome.org/GNOME/gdm/issues/527
 ExecStart=
-ExecStart=/bin/openvt -ws /lib/cryptsetup/scripts/cryptroot-suspend-wrapper
+ExecStart=/bin/openvt -ws -c5 /lib/cryptsetup/scripts/cryptroot-suspend-wrapper
