Use OOMScoreAdjust setting in systemd.suspend unit drop-in

--- a/debian/cryptroot-suspend/systemd_cryptroot-suspend.conf
+++ b/debian/cryptroot-suspend/systemd_cryptroot-suspend.conf
@@ -1,4 +1,6 @@
 [Service]
+# Protect against OOM killer. luksResume with Argon2 needs a lot of memory
+OOMScoreAdjust=-999
 # override ExecStart of systemd-suspend.service
 # use VT 5 as workaround for https://gitlab.gnome.org/GNOME/gdm/issues/527
 ExecStart=
