Add option to keep initramfs mounted to speed up suspension

--- a/debian/scripts/suspend/suspend.conf
+++ b/debian/scripts/suspend/suspend.conf
@@ -3,3 +3,6 @@
 
 # Automatically unlock user sessions after resume
 # UNLOCK_SESSIONS="false"
+
+# Keep unpacked initramfs in RAM to accelerate suspension
+# KEEP_INITRAMFS="false"
