Small enhancements to config file

--- a/debian/scripts/suspend/suspend.conf
+++ b/debian/scripts/suspend/suspend.conf
@@ -1,5 +1,5 @@
 # Caution: This file will be sourced by another script.
-# Make sure to change permissions carefully.
+# For security reasons, it should only be writable by root.
 
 # Automatically unlock user sessions after resume
 # UNLOCK_SESSIONS="false"
