d/rules: Build with `--with-tmpfilesdir`.
In order to force installing usr/lib/tmpfiles.d/cryptsetup.conf instead
of picking the source from scripts/cryptsetup.conf.  This fixes FTBS in
environments containing systemd.

Closes: #968250

--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,7 @@ override_dh_auto_configure:
 	dh_auto_configure -- $(CONFFLAGS) \
 		--libdir=/lib/$(DEB_HOST_MULTIARCH) \
 		--sbindir=/sbin \
+		--with-tmpfilesdir=/usr/lib/tmpfiles.d \
 		--enable-libargon2 \
 		--enable-shared \
 		--enable-cryptsetup-reencrypt
