--- a/debian/gitlab-ci.yml
+++ b/debian/gitlab-ci.yml
@@ -25,7 +25,7 @@ stages:
   - deploy
 
 pages:
-  image: debian:9
+  image: debian:10
   script:
     - apt update
     - apt -y install pandoc
@@ -53,5 +53,4 @@ pages:
     #variables:
     #  - $CI_COMMIT_TAG
   variables:
-    # --smart/-S has been removed in Buster.  Use '-f markdown+smart' instead.
-    PANDOC: 'pandoc -sS -c pandoc.css -f markdown -t html'
+    PANDOC: 'pandoc -s -c pandoc.css -f markdown+smart -t html'
