d/control: Make cryptsetup-suspend explicitly depend on kbd.
We use openvt(1) in the systemd-suspend.service override.

Closes: #969226

--- a/debian/control
+++ b/debian/control
@@ -95,6 +95,7 @@ Package: cryptsetup-suspend
 Architecture: linux-any
 Multi-Arch: foreign
 Depends: cryptsetup-initramfs (>= 2:2.3.3-1~),
+         kbd,
          systemd,
          ${misc:Depends},
          ${shlibs:Depends}
