--- a/debian/scripts/suspend/systemd_cryptsetup-suspend.conf
+++ b/debian/scripts/suspend/systemd_cryptsetup-suspend.conf
@@ -4,6 +4,9 @@ OOMScoreAdjust=-999
 # Give us higher priority
 Nice=-10
 # override ExecStart of systemd-suspend.service
-# use VT 5 as workaround for https://gitlab.gnome.org/GNOME/gdm/issues/527
 ExecStart=
-ExecStart=/bin/openvt -ws -c8 /lib/cryptsetup/scripts/suspend/cryptsetup-suspend-wrapper
+# use VT 8 as workaround for https://gitlab.gnome.org/GNOME/gdm/issues/527
+# XXX on systems specifying the console= kernel parameter (such as a serial
+# port) we should probably honor it
+ExecStart=/bin/openvt -ws -c8 \
+    /lib/cryptsetup/scripts/suspend/cryptsetup-suspend-wrapper
