CI: add 'provisioning' stage.
See https://salsa.debian.org/salsa-ci-team/pipeline/raw/master/salsa-ci.yml .
Would be better if we could extend the list rather than override it.

--- a/debian/gitlab-ci.yml
+++ b/debian/gitlab-ci.yml
@@ -19,9 +19,11 @@ reprotest:
 
 # Add a deploy stage for pages
 stages:
+  - provisioning
   - build
   - publish
   - test
+  # would be better if we could extend the list rather than override it
   - deploy
 
 pages:
