--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,7 @@ Build-Depends: autoconf,
 Standards-Version: 4.5.1
 Homepage: https://gitlab.com/cryptsetup/cryptsetup
 Vcs-Browser: https://salsa.debian.org/cryptsetup-team/cryptsetup
-Vcs-Git: https://salsa.debian.org/cryptsetup-team/cryptsetup.git
+Vcs-Git: https://salsa.debian.org/cryptsetup-team/cryptsetup.git -b debian/latest
 
 Package: cryptsetup
 Architecture: linux-any
