--- a/debian/gitlab-ci.yml
+++ b/debian/gitlab-ci.yml
@@ -48,9 +48,9 @@ pages:
     paths:
       - public
   only:
-    # only run on master branch
+    # only run on debian/latest branch
     refs:
-      - master
+      - debian/latest
     # only run when commit is tagged (to install docs on package releases only)
     #variables:
     #  - $CI_COMMIT_TAG
