Rename upstream branch to upstream/latest for DEP-14 compliance.
While we're into branch renaming we might as well get rid of that ugly
upstream-2.0.x :-)

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
 debian-branch = debian/latest
-pristine-tar = False
+upstream-branch = upstream/latest
 upstream-tag = v%(version)s
-upstream-branch = upstream-2.0.x
+pristine-tar = False
