--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,7 @@
 [DEFAULT]
 debian-branch = debian/latest
 upstream-branch = upstream/latest
-upstream-tag = v%(version)s
 pristine-tar = False
+
+[import-orig]
+upstream-vcs-tag = v%(version)s
