Prepare new release (experimental).

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-debian-branch = debian/latest
+debian-branch = debian/experimental
 upstream-branch = upstream/latest
 upstream-tag = v%(version)s
 pristine-tar = False
